--- a/src/_data/i18n/main/el.json
+++ b/src/_data/i18n/main/el.json
@@ -1,12 +1,108 @@
 {
     "siteName": "Europlanet",
-    "header":{
-        "menu":{"menu":"ΜΕΝΟΥ", "home":"Αρχική", "works":"ΕΡΓΑ", "about":"ΣΧΕΤΙΚΑ", "contact":"ΕΠΙΚΟΙΝΩΝΙΑ", "email":"(EMAIL)", "socials":"(SOCIALS)"},
-        "nav":{"button":"ΑΣ ΜΙΛΗΣΟΥΜΕ"}
-    },
     "home": {
-        "hero":{"hero_title_1": "Πέρα από τα Οπτικά.","hero_title_2": "Χτισμένο με Όραμα.","hero_description":"Δημιουργούμε brands, ιστοσελίδες και ψηφιακές εμπειρίες με πρόθεση, σαφήνεια και φροντίδα.","hero_button":"ΕΝΑΡΞΗ ΕΡΓΟΥ"},
-        "about":{"about__label":"(ΣΧΕΤΙΚΑ)","about_description":"Συνδυάζουμε χρόνια εμπειρίας στον σχεδιασμό ιστοσελίδων και στο branding για να δημιουργούμε ουσιαστικές, αφηγηματικές εμπειρίες."}
+        "hero": {
+            "hero_title_1": "Πέρα από τα Οπτικά.",
+            "hero_title_2": "Χτισμένο με Όραμα.",
+            "hero_description": "Δημιουργούμε μάρκες, ιστοσελίδες και ψηφιακές εμπειρίες με πρόθεση, σαφήνεια και φροντίδα.",
+            "hero_button": "ΕΝΑΡΞΗ ΕΡΓΟΥ"
+        },
+        "about": {
+            "about__label": "(ΣΧΕΤΙΚΑ)",
+            "about_description": "Συνδυάζουμε χρόνια εμπειρίας στον σχεδιασμό ιστοσελίδων και στη δημιουργία ταυτότητας για να δημιουργούμε ουσιαστικές, αφηγηματικές εμπειρίες."
+        },
+        "we_build_brands_websites_and_digital": "Δημιουργούμε μάρκες, ιστοσελίδες και ψηφιακές εμπειρίες",
+        "with_intention_clarity_and_care": "με πρόθεση, σαφήνεια και φροντίδα.",
+        "trusted_by": "εμπιστεύονται:",
+        "latest_work": "Τελευταία δουλειά",
+        "bima": "Bima",
+        "arjuna": "Arjuna",
+        "mandala": "Mandala",
+        "website_and_branding_for_ai_automation": "Ιστοσελίδα και ταυτότητα για εταιρεία αυτοματοποίησης ΑΙ",
+        "personal_portfolio_website_for_talented_design": "Προσωπική ιστοσελίδα πορτφόλιο για ταλαντούχο σχεδιαστή/μηχανικό",
+        "why_us": "(ΓΙΑΤΙ ΕΜΕΙΣ)",
+        "numbers_dont_lie": "ΑΠΟΤΕΛΕΣΜΑΤΑ",
+        "with_a_decade_of_expertise_we": "Με πάνω από μια δεκαετία εμπειρίας, δημιουργούμε δυνατές μάρκες και ψηφιακές εμπειρίες υψηλού αντίκτυπου που φέρνουν αποτελέσματα.",
+        "successful_projects_completed": "Ολοκληρωμένα επιτυχημένα έργα",
+        "years_of_experience_in_creative_industry": "Χρόνια εμπειρίας στη δημιουργική βιομηχανία",
+        "customer_satisfaction_rate": "Ποσοστό ικανοποίησης πελατών",
+        "m": "εκ.",
+        "in_client_revenue_growth": "Αύξηση εσόδων πελατών",
+        "working_with_nakula_felt_personal": "Η συνεργασία με τη Nakula ήταν προσωπική.",
+        "the_process_was_smooth_the_design": "Η διαδικασία ήταν ομαλή, ο σχεδιασμός εντυπωσιακός και όλα είχαν νόημα.",
+        "dianna_sulastri": "Dianna Sulastri",
+        "founder_at_mandala": "Ιδρύτρια στη Mandala",
+        "how_we_can_help": "ΠΩΣ ΜΠΟΡΟΥΜΕ ΝΑ ΒΟΗΘΗΣΟΥΜΕ",
+        "services": "(ΥΠΗΡΕΣΙΕΣ)",
+        "web_design_development": "Σχεδιασμός & Ανάπτυξη Ιστοσελίδων",
+        "logos_colors_type_your_brand_fully": "Λογότυπα, χρώματα, τυπογραφία — η μάρκα σου, ολοκληρωμένα ζωντανή.",
+        "responsive_design": "Προσαρμοστικός σχεδιασμός",
+        "interaction_design": "Σχεδιασμός αλληλεπίδρασης",
+        "cms_interaction": "Διαχείριση μέσω CMS",
+        "seo_optimization": "Βελτιστοποίηση SEO",
+        "branding": "Ταυτότητα μάρκας",
+        "crafting_visual_identities_that_feel_clear": "Δημιουργούμε οπτικές ταυτότητες που είναι καθαρές, διαχρονικές και πιστές στη μάρκα σου.",
+        "logo_design": "Σχεδιασμός λογοτύπου",
+        "color_system": "Σύστημα χρωμάτων",
+        "typography": "Τυπογραφία",
+        "brand_direction": "Κατεύθυνση μάρκας",
+        "social_media": "Κοινωνικά δίκτυα",
+        "branded_templates_and_content_systems_to": "Επωνυμοποιημένα πρότυπα και συστήματα περιεχομένου για να μένεις συνεπής και ελκυστικός στην κύλιση.",
+        "instagram_design": "Σχεδιασμός Instagram",
+        "story_kits": "Πακέτα Ιστοριών",
+        "content_templates": "Πρότυπα περιεχομένου",
+        "visual_consistency": "Οπτική συνέπεια",
+        "motion_design": "Σχεδιασμός κίνησης",
+        "thoughtful_animations_that_add_rhythm_clarity": "Προσεγμένες κινήσεις που δίνουν ρυθμό, σαφήνεια και ζωή στη διεπαφή.",
+        "microinteractions": "Μικρο-αλληλεπιδράσεις",
+        "scroll_effects": "Εφέ κύλισης",
+        "hover_states": "Καταστάσεις αιώρησης",
+        "framer_motion": "Framer Motion",
+        "how_we_work": "ΔΙΑΔΙΚΑΣΙΑ",
+        "process": "(ΔΙΑΔΙΚΑΣΙΑ)",
+        "step_1": "ΒΗΜΑ 1",
+        "discovery_phase": "Φάση Ανακάλυψης",
+        "understanding_your_goals_pain_points_audience": "Κατανόηση στόχων, δυσκολιών, κοινού και αυτού που σε ξεχωρίζει.",
+        "step_2": "ΒΗΜΑ 2",
+        "project_kickoff": "Έναρξη Έργου",
+        "setting_up_projects_aligning_on_scope": "Οργάνωση έργου, ευθυγράμμιση σε εύρος και ορόσημα, και ξεκίνημα δουλειάς.",
+        "step_3": "ΒΗΜΑ 3",
+        "receive_refine": "Λήψη & Βελτίωση",
+        "sharing_initial_designs_gathering_feedback_and": "Μοιραζόμαστε τα αρχικά σχέδια, συλλέγουμε ανατροφοδότηση και κάνουμε βελτιώσεις μαζί.",
+        "step_4": "ΒΗΜΑ 4",
+        "continue_grow": "Συνέχεια & Ανάπτυξη",
+        "launching_with_confidence_and_supporting_your": "Λανσάρουμε με αυτοπεποίθηση και στηρίζουμε τα επόμενα δυνατά σου βήματα.",
+        "300_reviews_on": "300+ αξιολογήσεις στο",
+        "clutch": "Clutch",
+        "testimonials": "(ΜΑΡΤΥΡΙΕΣ)",
+        "we_deliver_datadriven_and_resultfocused_deliverables": "Παραδίδουμε λύσεις βασισμένες σε δεδομένα και προσανατολισμένες στο αποτέλεσμα. Δες τι λένε για εμάς.",
+        "mario_baskoro": "Mario Baskoro",
+        "cto_of_arjuna": "CTO της Arjuna",
+        "our_socials_used_to_feel_scattered": "Τα κοινωνικά μας δίκτυα ήταν διάσπαρτα και ασυνεπή. Τώρα όλα είναι συνεπή με τη μάρκα, πιο ελκυστικά και αποδίδουν καλύτερα.",
+        "evelyn_widjaja": "Evelyn Widjaja",
+        "marketing_lead_at_bima": "Επικεφαλής μάρκετινγκ στη Bima",
+        "from_branding_to_the_website_to": "Από την ταυτότητα μέχρι την ιστοσελίδα και τα κοινωνικά δίκτυα — όλα ήταν συνεκτικά, στρατηγικά και φτιαγμένα με πραγματική φροντίδα.",
+        "karina_wulandari": "Karina Wulandari",
+        "founder_at_batavia": "Ιδρύτρια στη Batavia",
+        "working_with_them_felt_like_having": "Η συνεργασία μαζί τους ήταν σαν να έχεις εσωτερική ομάδα που απλά καταλαβαίνει.",
+        "pricing": "ΤΙΜΕΣ",
+        "from_launch_to_scale_weve_got": "Από το λανσάρισμα μέχρι την ανάπτυξη, είμαστε δίπλα σου σε κάθε στάδιο.",
+        "monthly": "Μηνιαία",
+        "annual": "Ετήσια",
+        "bespoke": "Κατά παραγγελία",
+        "perfect_for_specialized_needs_or_earlystage": "Ιδανικό για εξειδικευμένες ανάγκες ή έργα αρχικού σταδίου.",
+        "starter": "Εκκίνηση",
+        "perfect_for_solo_founders_and_early": "Ιδανικό για μεμονωμένους ιδρυτές και μάρκες σε αρχικό στάδιο.",
+        "1_senior_designer": "1 έμπειρος σχεδιαστής",
+        "mo": "/mo",
+        "popular": "(ΔΗΜΟΦΙΛΕΣ)",
+        "latest_insights": "ΤΕΛΕΥΤΑΙΕΣ ΙΔΕΕΣ",
+        "blog": "(ΙΣΤΟΛΟΓΙΟ)",
+        "design_strategy": "Στρατηγική σχεδιασμού",
+        "feb_4_2025": "4 Φεβ 2025",
+        "why_clarity_beats_creativity_in_web": "Γιατί η σαφήνεια ξεπερνά τη δημιουργικότητα στον σχεδιασμό ιστοσελίδων",
+        "feb_42025": "4 ΦΕΒ, 2025",
+        "why_motion_design_makes_your_website": "Γιατί ο σχεδιασμός κίνησης κάνει την ιστοσελίδα σου να “ζει”",
+        "motion_helps_your_website_feel_modern": "Η κίνηση κάνει την ιστοσελίδα σου να δείχνει σύγχρονη και καθαρή. Δες γιατί έχει σημασία και πώς να τη χρησιμοποιείς χωρίς υπερβολές."
     }
-
 }
