--- a/src/_data/i18n/main/en.json
+++ b/src/_data/i18n/main/en.json
@@ -1,11 +1,108 @@
 {
     "siteName": "Europlanet",
-    "header":{
-        "menu":{"menu":"MENU", "home":"HOME", "works":"WORKS", "about":"ABOUT", "contact":"CONTACT" , "email":"(EMAIL)", "socials":"(SOCIALS)"} ,
-        "nav":{"button":"LET'S TALK"}
-    },
-    "home":{
-        "hero":{"hero_title_1": "Beyond Visuals.","hero_title_2": "Built with Vision.","hero_description":"We build brands, websites, and digital experiences with intention, clarity and care.","hero_button":"START A PROJECT"},
-        "about":{"about__label":"(ABOUT)","about_description":"We combines years of web design and branding expertise to craft meaningful, story-driven experiences."}
+    "home": {
+        "hero": {
+            "hero_title_1": "Beyond Visuals.",
+            "hero_title_2": "Built with Vision.",
+            "hero_description": "We build brands, websites, and digital experiences with intention, clarity and care.",
+            "hero_button": "START A PROJECT"
+        },
+        "about": {
+            "about__label": "(ABOUT)",
+            "about_description": "We combines years of web design and branding expertise to craft meaningful, story-driven experiences."
+        },
+        "we_build_brands_websites_and_digital": "We build brands, websites, and digital experiences",
+        "with_intention_clarity_and_care": "with intention, clarity and care.",
+        "trusted_by": "trusted by:",
+        "latest_work": "Latest work",
+        "bima": "Bima",
+        "arjuna": "Arjuna",
+        "mandala": "Mandala",
+        "website_and_branding_for_ai_automation": "Website and branding for AI Automation Company",
+        "personal_portfolio_website_for_talented_design": "Personal Portfolio Website for talented design engineer",
+        "why_us": "(WHY US)",
+        "numbers_dont_lie": "NUMBERS DON'T LIE",
+        "with_a_decade_of_expertise_we": "With a decade of expertise, We crafts bold brands and high-impact digital experience that get results.",
+        "successful_projects_completed": "Successful projects completed",
+        "years_of_experience_in_creative_industry": "Years of experience in creative industry",
+        "customer_satisfaction_rate": "Customer satisfaction rate",
+        "m": "M",
+        "in_client_revenue_growth": "In Client revenue growth",
+        "working_with_nakula_felt_personal": "Working with Nakula felt personal.",
+        "the_process_was_smooth_the_design": "The process was smooth, the design was stunning, and everything had meaning.",
+        "dianna_sulastri": "Dianna Sulastri",
+        "founder_at_mandala": "Founder at Mandala",
+        "how_we_can_help": "HOW WE CAN HELP",
+        "services": "(SERVICES)",
+        "web_design_development": "Web Design & Development",
+        "logos_colors_type_your_brand_fully": "Logos, colors, type, your brand, fully alive.",
+        "responsive_design": "Responsive Design",
+        "interaction_design": "Interaction Design",
+        "cms_interaction": "CMS Interaction",
+        "seo_optimization": "SEO Optimization",
+        "branding": "Branding",
+        "crafting_visual_identities_that_feel_clear": "Crafting visual identities that feel clear, timeless, and true to your brand.",
+        "logo_design": "Logo Design",
+        "color_system": "Color System",
+        "typography": "Typography",
+        "brand_direction": "Brand Direction",
+        "social_media": "Social Media",
+        "branded_templates_and_content_systems_to": "Branded templates and content systems to help you stay consistent and scroll-worthy.",
+        "instagram_design": "Instagram Design",
+        "story_kits": "Story Kits",
+        "content_templates": "Content Templates",
+        "visual_consistency": "Visual Consistency",
+        "motion_design": "Motion Design",
+        "thoughtful_animations_that_add_rhythm_clarity": "Thoughtful animations that add rhythm, clarity, and life to your interface.",
+        "microinteractions": "Micro-interactions",
+        "scroll_effects": "Scroll Effects",
+        "hover_states": "Hover States",
+        "framer_motion": "Framer Motion",
+        "how_we_work": "HOW WE WORK",
+        "process": "(PROCESS)",
+        "step_1": "STEP 1",
+        "discovery_phase": "Discovery Phase",
+        "understanding_your_goals_pain_points_audience": "Understanding your, goals, pain points, audience, and what sets you apart.",
+        "step_2": "STEP 2",
+        "project_kickoff": "Project Kickoff",
+        "setting_up_projects_aligning_on_scope": "Setting up projects, aligning on scope and milestones, and diving into the work.",
+        "step_3": "STEP 3",
+        "receive_refine": "Receive & Refine",
+        "sharing_initial_designs_gathering_feedback_and": "Sharing initial designs, gathering feedback, and fine-tuning together.",
+        "step_4": "STEP 4",
+        "continue_grow": "Continue & Grow",
+        "launching_with_confidence_and_supporting_your": "Launching with confidence and supporting your next extraordinary moves.",
+        "300_reviews_on": "300+ Reviews on",
+        "clutch": "Clutch",
+        "testimonials": "(TESTIMONIALS)",
+        "we_deliver_datadriven_and_resultfocused_deliverables": "We deliver data-driven and result-focused deliverables. Hear what they say about us.",
+        "mario_baskoro": "Mario Baskoro",
+        "cto_of_arjuna": "CTO of Arjuna",
+        "our_socials_used_to_feel_scattered": "Our socials used to feel scattered and inconsistent. Now, everything is on-brand, engaging, and performing better.",
+        "evelyn_widjaja": "Evelyn Widjaja",
+        "marketing_lead_at_bima": "Marketing Lead at Bima",
+        "from_branding_to_the_website_to": "From branding to the website to social—everything was cohesive, strategic, and done with serious care.",
+        "karina_wulandari": "Karina Wulandari",
+        "founder_at_batavia": "Founder at Batavia",
+        "working_with_them_felt_like_having": "Working with them felt like having an in-house team that just gets it.",
+        "pricing": "PRICING",
+        "from_launch_to_scale_weve_got": "From launch to scale, we’ve got you covered at every stage.",
+        "monthly": "Monthly",
+        "annual": "Annual",
+        "bespoke": "Bespoke",
+        "perfect_for_specialized_needs_or_earlystage": "Perfect for specialized needs or early-stage projects.",
+        "starter": "Starter",
+        "perfect_for_solo_founders_and_early": "Perfect for solo founders and early stage brands.",
+        "1_senior_designer": "1 Senior designer",
+        "mo": "/mo",
+        "popular": "(POPULAR)",
+        "latest_insights": "LATEST INSIGHTS",
+        "blog": "(BLOG)",
+        "design_strategy": "Design Strategy",
+        "feb_4_2025": "Feb 4, 2025",
+        "why_clarity_beats_creativity_in_web": "Why Clarity Beats Creativity in Web Design",
+        "feb_42025": "FEB 4,2025",
+        "why_motion_design_makes_your_website": "Why Motion Design Makes Your Website Feel Alive",
+        "motion_helps_your_website_feel_modern": "Motion helps your website feel modern and clear. Here’s why it matters and how to use it without overdoing it."
     }
 }
